Fix message alignment in login error alert

--- a/css/style.css
+++ b/css/style.css
@@ -6691,6 +6691,10 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
 .region-highlighted .alert {
   margin: 60px 40px 0 25px; }
 
+.alert > p,
+.alert > ul {
+  margin-left: 0; }
+
 /* BLOCK REGION - CONTENT */
 .region-content {
   margin-top: 50px;
